Added image size

--- a/css/960_12_col.css
+++ b/css/960_12_col.css
@@ -26,6 +26,13 @@ body {
   width: 960px;
 }
 
+/*Image crop
+---------------------------------------------------------------------------------------------------*/
+img.small{
+    width=174px;
+    height=143;
+}
+
 /* `Grid >> Global
 ----------------------------------------------------------------------------------------------------*/
 
