cambios ver coleccion

--- a/css/960_12_col.css
+++ b/css/960_12_col.css
@@ -30,9 +30,13 @@ body {
 ---------------------------------------------------------------------------------------------------*/
 img.small{
     width=174px;
-    height=143;
+    height=143px;
 }
 
+#small {
+  width=174px;
+  height=143px;
+}
 /* `Grid >> Global
 ----------------------------------------------------------------------------------------------------*/
 
